CLI updates
Signed-off-by: Paulo Lopes <pmlopes@gmail.com>